--- a/src/sass/_include/decoration.scss
+++ b/src/sass/_include/decoration.scss
@@ -24,7 +24,7 @@ body {
 .btn-more {
   @include typography.en-regular;
   position: relative;
-  z-index: 100;
+  z-index: 10;
   display: flex;
   gap: 10px;
   align-items: center;
@@ -99,6 +99,16 @@ body {
     height: 10px;
     content: "";
     transform: translate(-50%, -50%);
+  }
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
 
