--- a/src/sass/main/header.scss
+++ b/src/sass/main/header.scss
@@ -147,6 +147,10 @@
       transition: 0.3s ease.$custom1;
       transform: translateX(100%);
 
+      @include mq.sm {
+        width: 100%;
+      }
+
       .bg {
         position: absolute;
         right: -77%;
@@ -160,6 +164,10 @@
         animation: 60s infinite rotation linear;
 
         @include path.bg-img("svg/deco-circle.svg");
+        @include mq.sm {
+          right: -400px;
+          bottom: -300px;
+        }
       }
 
       ul {
@@ -169,7 +177,10 @@
         display: flex;
         flex-direction: column;
         gap: 50px;
-        font-size: 45px;
+
+        @include mq.sm {
+          gap: 20px;
+        }
 
         li {
           position: relative;
@@ -198,8 +209,20 @@
             color: var(--color-black);
             text-decoration: none;
 
+            p {
+              font-size: 45px;
+
+              @include mq.sm {
+                font-size: 30px;
+              }
+            }
+
             span {
               font-size: 16px;
+
+              @include mq.sm {
+                font-size: 12px;
+              }
             }
           }
         }
@@ -212,9 +235,23 @@
       display: flex;
       gap: 30px;
 
+      @include mq.sm {
+        gap: 20px;
+      }
+
       a {
-        path {
-          transition: 0.3s ease.$custom1;
+        svg {
+          width: 100%;
+          height: 100%;
+
+          path {
+            transition: 0.3s ease.$custom1;
+          }
+        }
+
+        @include mq.sm {
+          width: 40px;
+          height: 40px;
         }
 
         &:hover {
@@ -222,16 +259,6 @@
             fill: var(--color-gold);
           }
         }
-      }
-
-      .github {
-        width: 50px;
-        height: 50px;
-      }
-
-      .x {
-        width: 50px;
-        height: 50px;
       }
     }
   }
