--- a/src/pug/_include/header.pug
+++ b/src/pug/_include/header.pug
@@ -6,7 +6,7 @@ header.global-header
       span
       p.menu menu
       p.close close
-  nav#nav.active
+  nav#nav
     .inner
       .bg
       ul
