--- a/src/sass/main/footer.scss
+++ b/src/sass/main/footer.scss
@@ -13,6 +13,10 @@
   position: relative;
   padding-top: 240px;
 
+  @include mq.sm {
+    padding-top: 100px;
+  }
+
   .bg {
     position: absolute;
     top: 0;
@@ -127,6 +131,7 @@
         .copyrigft {
           margin: 0 auto 0 0;
           font-size: 20px;
+          text-align: left;
 
           @include mq.sm {
             font-size: 12px;
