worksページマークアップ

--- a/src/pug/top/works.pug
+++ b/src/pug/top/works.pug
@@ -43,6 +43,6 @@ section.works
             figure.img-works.works-5
             figure.works-bg
           h3 テレビ局 リクルートサイト
-    a.btn-more(href="#")
+    a.btn-more(href="/works-index/")
       include ../../assets/img/svg/logo.svg
       span MORE
