--- a/src/pug/works-index.pug
+++ b/src/pug/works-index.pug
@@ -1,7 +1,8 @@
 extends _template/_base
 
 block vars
-  - lev1ID = "2";
+  - lev1ID = "works";
+  - lev = 2;
 
 block links
   link(href=`${pathToCSS}works-index.css${hash}`, rel="stylesheet", type="text/css")
