worksページ動き追加

--- a/src/pug/_include/header.pug
+++ b/src/pug/_include/header.pug
@@ -1,6 +1,6 @@
 header.global-header
   .bar
-    a.logo(href="#")
+    a.logo(href="/")
     #hamburger.hamburger
       span
       span
@@ -11,11 +11,11 @@ header.global-header
       .bg
       ul
         li
-          a(href="#") 
+          a(href="/") 
             p Top
             span トップ
         li
-          a(href="#") 
+          a(href="/works-list/") 
             p Works
             span 完成したクエスト報酬
         li
