--- a/src/pug/top/about-me.pug
+++ b/src/pug/top/about-me.pug
@@ -25,7 +25,7 @@ section#about-me.about-me
           h3 ツール使用歴
           p （直近１年間のツール使用期間）
           .hr
-          .tool
+          #tool.tool
             .item
               figure.item1
               .status
