--- a/src/sass/works-list.scss
+++ b/src/sass/works-list.scss
@@ -9,4 +9,4 @@
 @use "_include/vw";
 @use "_include/geom";
 
-@include meta.load-css("works-index/works-item.scss");
+@include meta.load-css("works-list/works-item.scss");
