--- a/src/pug/top.pug
+++ b/src/pug/top.pug
@@ -15,4 +15,5 @@ block main
 
 block scripts
   script(src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js")
-  script(src=`${pathToJS}main.js`)
+  script(src=`${pathToJS}common.js`)
+  script(src=`${pathToJS}top.js`)
