--- a/src/sass/works-list/works-item.scss
+++ b/src/sass/works-list/works-item.scss
@@ -9,7 +9,7 @@
 @use "../_include/vw";
 @use "../_include/geom";
 
-.works-index {
+.works-list {
   margin: 0 108px 140px;
 
   @include mq.sm {
@@ -18,8 +18,10 @@
 
   h2 {
     @include typography.en-regular;
-    margin-bottom: 100px;
+    max-width: 1224px;
+    margin: 0 auto 100px;
     font-size: 170px;
+    line-height: 1;
 
     @include mq.sm {
       margin-bottom: 40px;
@@ -35,11 +37,11 @@
     margin: 0 auto;
 
     li {
-      width: 47%;
+      width: 45%;
       margin-bottom: 60px;
       opacity: 0;
-      transition: 0.3s ease.$custom1;
-      transform: translateY(-20px);
+      transition: 0.5s ease;
+      transform: translateY(20px);
 
       &.active {
         opacity: 1;
