about me スタイル中

--- a/src/pug/_include/header.pug
+++ b/src/pug/_include/header.pug
@@ -19,7 +19,7 @@ header.global-header
             p Works
             span 完成したクエスト報酬
         li
-          a(href="#")
+          a(href="/about-me/")
             p About me
             span 私について
       .icons
