--- a/src/pug/top/about-me.pug
+++ b/src/pug/top/about-me.pug
@@ -66,6 +66,6 @@ section#about-me.about-me
               figure.item2
               figure.item3
             p 1995年生まれの千葉県出身。<br>趣味でイラストを描いていたことをきっかけにweb制作に興味を持ち、2023年の11月からスクールでデザインとコーディングのスキルを習得しました。<br>現在、Webデザイナーとしての転職を目指し、新しいチャレンジに向けて活動中です。
-            a.btn-more(href="#")
+            a.btn-more(href="/about-me/")
               include ../../assets/img/svg/logo.svg
               span MORE
