アコーディオンパネル　試行錯誤中

--- a/src/pug/about-me/yuki-takatsu.pug
+++ b/src/pug/about-me/yuki-takatsu.pug
@@ -17,66 +17,76 @@ section#yuki.yuki
       .chara
     .right
       .slide-1
-        .item
-          .acc-head
+        details
+          summary
             figure.icon1
             p Web design
             span
           .acc-text
+            .inner
             p ユーザー目線で使いやすさを重視したデザインを心がけています。クライアントの強みを理解し、オリジナルのビジュアルを活かしたデザインで、ブランドの魅力を引き出すことができます。
-        .item
-          .acc-head
+        details
+          summary
             figure.icon2
             p Web Development
             span
           .acc-text
+            .inner
             p HTML(pug)、CSS(sass)、JavaScriptを用いたコーディングスキルを活かし、レスポンシブデザインや動きのあるインタラクションを実現できます。また、規則性のあるコードを心がけたり、GitやGitHubを活用してチーム開発の効率化にも対応可能です。
-          .acc-head
+        details
+          summary
             figure.icon3
             p Illustration
             span
           .acc-text
+            .inner
             p オリジナルキャラクターや背景イラストを制作し、Webコンテンツに合わせたビジュアルを提供。デザインとイラストを融合させることで、魅力的で統一感のあるサイト作りを支援します。
       .slide-2
         .item
-          .acc-head
+          summary
             figure.icon1
             p Web design
             span
           .acc-text
+            .inner
             p ユーザー目線で使いやすさを重視したデザインを心がけています。クライアントの強みを理解し、オリジナルのビジュアルを活かしたデザインで、ブランドの魅力を引き出すことができます。
         .item
-          .acc-head
+          summary
             figure.icon2
             p Web Development
             span
           .acc-text
+            .inner
             p HTML(pug)、CSS(sass)、JavaScriptを用いたコーディングスキルを活かし、レスポンシブデザインや動きのあるインタラクションを実現できます。また、規則性のあるコードを心がけたり、GitやGitHubを活用してチーム開発の効率化にも対応可能です。
-          .acc-head
+          summary
             figure.icon3
             p Illustration
             span
           .acc-text
+            .inner
             p オリジナルキャラクターや背景イラストを制作し、Webコンテンツに合わせたビジュアルを提供。デザインとイラストを融合させることで、魅力的で統一感のあるサイト作りを支援します。
       .slide-3
         .item
-          .acc-head
+          summary
             figure.icon1
             p Web design
             span
           .acc-text
+            .inner
             p ユーザー目線で使いやすさを重視したデザインを心がけています。クライアントの強みを理解し、オリジナルのビジュアルを活かしたデザインで、ブランドの魅力を引き出すことができます。
         .item
-          .acc-head
+          summary
             figure.icon2
             p Web Development
             span
           .acc-text
+            .inner
             p HTML(pug)、CSS(sass)、JavaScriptを用いたコーディングスキルを活かし、レスポンシブデザインや動きのあるインタラクションを実現できます。また、規則性のあるコードを心がけたり、GitやGitHubを活用してチーム開発の効率化にも対応可能です。
-          .acc-head
+          summary
             figure.icon3
             p Illustration
             span
           .acc-text
+            .inner
             p オリジナルキャラクターや背景イラストを制作し、Webコンテンツに合わせたビジュアルを提供。デザインとイラストを融合させることで、魅力的で統一感のあるサイト作りを支援します。
       .padding
