--- a/src/sass/_include/typography.scss
+++ b/src/sass/_include/typography.scss
@@ -1,5 +1,5 @@
 $-font-ja-zen: "Zen Old Mincho", "yumincho", "Hiragino Mincho ProN", serif;
-$-font-en: "Cormorant Garamond", serif;
+$-font-en: "EB Garamond", serif;
 
 @mixin zen-regular() {
   font-family: $-font-ja-zen;
