--- a/src/pug/about-me/yuki-takatsu.pug
+++ b/src/pug/about-me/yuki-takatsu.pug
@@ -16,7 +16,7 @@ section#yuki.yuki
           span わたしの強み
       .chara
     .right
-      .slide-1
+      .slide-1.active
         details
           summary
             figure.icon1
@@ -24,7 +24,7 @@ section#yuki.yuki
             span
           .acc-text
             .inner
-            p ユーザー目線で使いやすさを重視したデザインを心がけています。クライアントの強みを理解し、オリジナルのビジュアルを活かしたデザインで、ブランドの魅力を引き出すことができます。
+              p ユーザー目線で使いやすさを重視したデザインを心がけています。クライアントの強みを理解し、オリジナルのビジュアルを活かしたデザインで、ブランドの魅力を引き出すことができます。
         details
           summary
             figure.icon2
@@ -32,7 +32,7 @@ section#yuki.yuki
             span
           .acc-text
             .inner
-            p HTML(pug)、CSS(sass)、JavaScriptを用いたコーディングスキルを活かし、レスポンシブデザインや動きのあるインタラクションを実現できます。また、規則性のあるコードを心がけたり、GitやGitHubを活用してチーム開発の効率化にも対応可能です。
+              p HTML(pug)、CSS(sass)、JavaScriptを用いたコーディングスキルを活かし、レスポンシブデザインや動きのあるインタラクションを実現できます。また、規則性のあるコードを心がけたり、GitやGitHubを活用してチーム開発の効率化にも対応可能です。
         details
           summary
             figure.icon3
@@ -40,7 +40,7 @@ section#yuki.yuki
             span
           .acc-text
             .inner
-            p オリジナルキャラクターや背景イラストを制作し、Webコンテンツに合わせたビジュアルを提供。デザインとイラストを融合させることで、魅力的で統一感のあるサイト作りを支援します。
+              p オリジナルキャラクターや背景イラストを制作し、Webコンテンツに合わせたビジュアルを提供。デザインとイラストを融合させることで、魅力的で統一感のあるサイト作りを支援します。
       .slide-2
         .item
           summary
