slide2.3スタイル中

--- a/src/pug/about-me/yuki-takatsu.pug
+++ b/src/pug/about-me/yuki-takatsu.pug
@@ -42,51 +42,67 @@ section#yuki.yuki
             .inner
               p オリジナルキャラクターや背景イラストを制作し、Webコンテンツに合わせたビジュアルを提供。デザインとイラストを融合させることで、魅力的で統一感のあるサイト作りを支援します。
       .slide-2
-        .item
-          summary
-            figure.icon1
-            p Web design
-            span
-          .acc-text
-            .inner
-            p ユーザー目線で使いやすさを重視したデザインを心がけています。クライアントの強みを理解し、オリジナルのビジュアルを活かしたデザインで、ブランドの魅力を引き出すことができます。
-        .item
-          summary
-            figure.icon2
-            p Web Development
-            span
-          .acc-text
-            .inner
-            p HTML(pug)、CSS(sass)、JavaScriptを用いたコーディングスキルを活かし、レスポンシブデザインや動きのあるインタラクションを実現できます。また、規則性のあるコードを心がけたり、GitやGitHubを活用してチーム開発の効率化にも対応可能です。
-          summary
-            figure.icon3
-            p Illustration
-            span
-          .acc-text
-            .inner
-            p オリジナルキャラクターや背景イラストを制作し、Webコンテンツに合わせたビジュアルを提供。デザインとイラストを融合させることで、魅力的で統一感のあるサイト作りを支援します。
+        p （直近１年間のツール使用期間）
+        .tool
+          .item
+            .content
+              figure.item1
+              .status
+                .text
+                  p Figma
+                  span.month(date-month="10") ヶ月
+                .bar
+                  .fill
+            p オートレイアウト、プロトタイプ、バリアントを使用し、修正しやすいデータ作りが可能
+          .hr-gray
+          .item
+            .content
+              figure.item2
+              .status
+                .text
+                  p Photoshop
+                  span.month(date-month="5") ヶ月
+                .bar
+                  .fill
+            p Figmaでのデザイン作業を補完する形で使用し、主に生成AIを活用しつつ、写真の加工・修正や素材の最適化を行った
+          .hr-gray
+          .item
+            .content
+              figure.item3
+              .status
+                .text
+                  p Illustrator
+                  span.month(date-month="2") ヶ月
+                .bar
+                  .fill
+            p 簡単な図形を組み合わせたグラフィックを作成可能、現在はfigmaで行うことが多い
+          .hr-gray
+          .item
+            .content
+              figure.item4
+              .status
+                .text
+                  p Visual Studio Code
+                  span.month(date-month="10") ヶ月
+                .bar
+                  .fill
+            p PrettierやEmmetなどの拡張機能でコード整形・入力を自動化し、作業の効率化とエラーを削減
       .slide-3
         .item
-          summary
-            figure.icon1
-            p Web design
-            span
-          .acc-text
-            .inner
-            p ユーザー目線で使いやすさを重視したデザインを心がけています。クライアントの強みを理解し、オリジナルのビジュアルを活かしたデザインで、ブランドの魅力を引き出すことができます。
+          figure.bg-en1
+          span 01
+          .en LINK
+          .ja 人の役に立つことが好き
+          p 他者の役に立つことに喜びを感じ、「個人の力を超えてチームで成し遂げる」という信念のもと、周囲と協力して目標を達成することにやりがいを感じています。協力し合いながら一緒に成長できる環境でこそ最大の力を発揮します。
         .item
-          summary
-            figure.icon2
-            p Web Development
-            span
-          .acc-text
-            .inner
-            p HTML(pug)、CSS(sass)、JavaScriptを用いたコーディングスキルを活かし、レスポンシブデザインや動きのあるインタラクションを実現できます。また、規則性のあるコードを心がけたり、GitやGitHubを活用してチーム開発の効率化にも対応可能です。
-          summary
-            figure.icon3
-            p Illustration
-            span
-          .acc-text
-            .inner
-            p オリジナルキャラクターや背景イラストを制作し、Webコンテンツに合わせたビジュアルを提供。デザインとイラストを融合させることで、魅力的で統一感のあるサイト作りを支援します。
-      .padding
+          figure.bg-en2
+          span 02
+          .en FARM
+          .ja 自分の能力を高める力
+          p 目標に向かって努力し、継続的に自分を成長させる力を持っています。Web制作を学ぶ過程でも、限られた時間の中でスキルを磨き、着実に成果を上げました。
+        .item
+          figure.bg-en3
+          span 03
+          .en CALM
+          .ja 穏やかであたたかい性格
+          p 保育園の栄養士として勤め、食育を通して５年間子どもたちの成長を支えました。誰かの役に立てた時が一番嬉しい気持ちになります。得意なことは、人の良いところを見つけることです。
