--- a/src/pug/about-me.pug
+++ b/src/pug/about-me.pug
@@ -13,6 +13,7 @@ block main
   include about-me/yuki-takatsu
 
 block scripts
-  script(src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js")
+  script(src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js")
   script(src=`${pathToJS}common.js`)
   script(src=`${pathToJS}about-me.js`)
