--- a/src/sass/_include/decoration.scss
+++ b/src/sass/_include/decoration.scss
@@ -17,6 +17,7 @@ body {
   box-sizing: border-box;
   font-feature-settings: "palt";
   line-height: 1.5;
+  color: var(--color-black);
   letter-spacing: 0.1rem;
   background-color: var(--color-white);
 }
