--- a/src/sass/about-me/yuki-takatsu.scss
+++ b/src/sass/about-me/yuki-takatsu.scss
@@ -18,6 +18,7 @@
 
   .inner {
     display: flex;
+    width: 100%;
     max-width: 1224px;
     margin: 0 auto;
 
@@ -36,7 +37,7 @@
 
         .circle {
           @include geom.sq(1000px);
-          @include geom.abs(-67%, -49%);
+          @include geom.abs(-89%, -50%);
           z-index: 0;
           opacity: 0.3;
           transform-origin: center;
@@ -94,8 +95,8 @@
         box-sizing: border-box;
         flex-shrink: 0;
 
-        @include path.bg-img("/top/img-aboutme-character.png", cover);
-        width: 300px;
+        @include path.bg-img("/top/img-aboutme-character.png");
+        width: 370px;
         height: 600px;
         margin-right: 30px;
       }
@@ -105,13 +106,12 @@
       position: relative;
       z-index: 1;
       width: 35%;
+      height: calc(600px * 5);
 
       & > div {
-        position: sticky;
-        top: calc((100vh - 600px) / 2);
+        @include geom.abs;
         box-sizing: border-box;
-        height: 600px;
-        opacity: 0;
+        width: 100%;
         transition: 0.3s ease;
       }
 
@@ -120,6 +120,7 @@
       }
 
       .slide-1 {
+        height: 600px;
         overflow: auto;
         border-top: solid 1px var(--color-hr);
 
@@ -207,6 +208,7 @@
 
               p {
                 padding-bottom: 10px;
+                margin-right: 10px;
               }
             }
           }
@@ -224,11 +226,146 @@
       }
 
       .slide-2 {
-        background-color: var(--color-green);
+        @include typography.zen-regular;
+        height: 600px;
+        overflow: auto;
+
+        .tool {
+          display: flex;
+          flex-wrap: wrap;
+          align-items: center;
+          justify-content: center;
+          width: fit-content;
+
+          .item {
+            margin: 20px 0;
+
+            .content {
+              display: flex;
+              gap: 20px;
+              align-items: flex-end;
+              justify-content: center;
+              width: 100%;
+              margin-bottom: 10px;
+
+              figure {
+                @include geom.sq(55px);
+                flex-shrink: 0;
+              }
+
+              .item1 {
+                @include path.bg-img("svg/icon-figma.svg");
+              }
+
+              .item2 {
+                @include path.bg-img("svg/icon-photoshop.svg");
+              }
+
+              .item3 {
+                @include path.bg-img("svg/icon-illustrator.svg");
+              }
+
+              .item4 {
+                @include path.bg-img("svg/icon-vscode.svg");
+              }
+
+              .status {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                justify-content: center;
+                width: 100%;
+
+                .text {
+                  display: flex;
+                  justify-content: space-between;
+                  font-size: 16px;
+                  color: #8f8e8d;
+
+                  @include mq.sm {
+                    font-size: 13px;
+                  }
+                }
+
+                .bar {
+                  position: relative;
+                  height: 10px;
+                  background-color: var(--color-hr);
+                  border-radius: 100px;
+
+                  .fill {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 0%;
+                    height: 100%;
+                    content: "";
+                    background-color: var(--color-gold);
+                    border-radius: 100px;
+                  }
+                }
+              }
+            }
+          }
+
+          .hr-gray {
+            width: 100%;
+            height: 1px;
+            background-color: var(--color-hr);
+          }
+        }
       }
 
       .slide-3 {
-        background-color: var(--color-pink);
+        .item {
+          @include geom.abs;
+          @include typography.zen-regular;
+          display: flex;
+          flex-direction: column;
+          gap: 15px;
+          justify-content: center;
+          height: 600px;
+
+          figure {
+            @include geom.abs(-30px, 20%);
+            @include typography.en-regular;
+            z-index: 0;
+            width: calc(110% + 108px);
+            aspect-ratio: 570 / 156;
+            font-size: 200px;
+            object-position: right;
+          }
+
+          .bg-en1 {
+            @include path.bg-img("about-me/img-en-1.svg");
+          }
+
+          .bg-en2 {
+            @include path.bg-img("about-me/img-en-2.svg");
+          }
+
+          .bg-en3 {
+            @include path.bg-img("about-me/img-en-3.svg");
+          }
+
+          span {
+            @include typography.en-regular;
+            position: relative;
+            z-index: 1;
+            flex-shrink: 0;
+            width: fit-content;
+            font-size: 12px;
+            border-top: 1px solid var(--color-black);
+          }
+
+          .en,
+          .ja {
+            @include typography.zen-bold;
+            position: relative;
+            z-index: 1;
+            font-size: 20px;
+          }
+        }
       }
 
       .padding {
