スクロール試行錯誤中

--- a/src/pug/about-me.pug
+++ b/src/pug/about-me.pug
@@ -11,6 +11,7 @@ block main
   include about-me/about-me-top
   include about-me/biography
   include about-me/yuki-takatsu
+  include about-me/gsap
 
 block scripts
   script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js")
