--- a/src/sass/about-me.scss
+++ b/src/sass/about-me.scss
@@ -12,3 +12,4 @@
 @include meta.load-css("about-me/about-me-top.scss");
 @include meta.load-css("about-me/biography.scss");
 @include meta.load-css("about-me/yuki-takatsu.scss");
+@include meta.load-css("about-me/gsap.scss");
